packages/beff-core/tests/snapshots/frontend_v2__tests__import_star_nested_value_access.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"c.ts\",\nr#\"\n                    export const C = \"c\" as const;\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export * as B from \"./c\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import * as A from \"./b\";\n                    type X = typeof A.B.C;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type X = "c";


type BuiltParsers = {
  X: X,
}
