packages/beff-core/tests/snapshots/frontend_v2__tests__import_star_type.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export type Y1 = string;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import * as Y2 from \"./t\";\n                    type Z = Y2.Y1;\n                    parse.buildParsers<{ Z: Z }>();\n                \"#)])"
---
type BuiltParsers = {
  Z: string,
}
