packages/beff-core/tests/snapshots/frontend_v2__tests__import_star_type_from_other_file.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export type Y1 = string;\n                \"#,),\n(\"b.ts\", r#\"\n                    export * from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import * as Y2 from \"./b\";\n                    type Z = Y2.Y1;\n                    parse.buildParsers<{ Z: Z }>();\n                \"#)])"
---
--- a.ts ---
export type Y1 = string;
--- b.ts ---
export * from "./a";
--- entry.ts ---
import * as Y2 from "./b";
type Z = Y2.Y1;
parse.buildParsers<{ Z: Z }>();
--------------------------------
type Y1 = string;

type Z = Y1;


type BuiltParsers = {
  Z: Z,
}
