packages/beff-core/tests/snapshots/frontend_v2__tests__import_star_value.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export const Y1 = \"abc\" as const;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import * as Y2 from \"./t\";\n                    type Z = typeof Y2.Y1;\n                    parse.buildParsers<{ Z: Z }>();\n                \"#)])"
---
type entry_ts__Z = "abc";


type BuiltParsers = {
  Z: entry_ts__Z,
}
