packages/beff-core/tests/snapshots/frontend_v2__tests__import_type_literal_default.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export default \"a\" as const;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    type X = typeof import(\"./t\").default;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type X = "a";


type BuiltParsers = {
  X: X,
}
