packages/beff-core/tests/snapshots/frontend_v2__tests__import_type_of_default_export.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    type T = string;\n                    export default T;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    type X = import(\"./t\").default;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: string,
}
