packages/beff-core/tests/snapshots/frontend_v2__tests__import_type_only.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export type T = string;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import type { T } from \"./t\";\n                    type X = T;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: string,
}
