packages/beff-core/tests/snapshots/frontend_v2__tests__import_type_syntax.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export type A = string;\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    type X = import(\"./t\").A;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type X = A;

type A = string;


type BuiltParsers = {
  X: X,
}
